# azure-copilot-sdlc

./: .gitignore  Copiloter.sln  QUICKSTART.md  README.md
sample/agents/: developer.agent.md  planner.agent.md  reviewer.agent.md
src/: .env.example  README.md  build.py  cli.py  pyproject.toml
src/Copiloter.CLI/: Application.cs  Copiloter.CLI.csproj  Planning.md  Program.cs
src/Copiloter.CLI/Commands/: DevelopCommand.cs  PlanCommand.cs  ReviewCommand.cs
src/Copiloter.CLI/Features/Behaviours/: RequirementsBehaviour.cs
src/Copiloter.CLI/Features/Commands/: DevelopCommand.cs  PlanCommand.cs  ReviewCommand.cs
src/Copiloter.CLI/Models/: AIPlan.cs  AgentConfig.cs  CopilotConfig.cs  IWorkItemRequest.cs
src/Copiloter.CLI/Properties/: launchSettings.json
src/Copiloter.CLI/Services/: AgentDiscoveryService.cs  CopilotAgentService.cs  McpConfigurationService.cs
src/Copiloter.CLI/Services/Interfaces/: IAgentDiscoveryService.cs  ICopilotAgentService.cs  IMcpConfigurationService.cs
src/Copiloter.CLI/Utilities/: ConsoleHelper.cs  PlanParser.cs
src/commands/: __init__.py  develop.py  plan.py  review.py
src/models/: __init__.py
src/services/: __init__.py  agent_discovery.py  copilot_agent.py  git_service.py  mcp_configuration.py
src/utilities/: __init__.py  config.py  console_helper.py  plan_parser.py  validators.py
